--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "rpl-dag-root.h": "c"
+        "rpl-dag-root.h": "c",
+        "udp-client-malicious.h": "c"
     }
 }
